[gd_scene format=3 uid="uid://dnewodvo6ps51"]

[ext_resource type="Script" uid="uid://56s6dg5kl1g1" path="res://Scripts/player.gd" id="1_v0iea"]
[ext_resource type="PackedScene" uid="uid://wren1i1or0xq" path="res://animations/cac-1769853507445.gltf" id="2_8erm5"]
[ext_resource type="PackedScene" uid="uid://8ipktl8rnu2h" path="res://Models/Sword.glb" id="2_cvnsp"]
[ext_resource type="PackedScene" uid="uid://dr5w28s3wl8ci" path="res://Scenes/shockwave.tscn" id="2_f1ek2"]
[ext_resource type="PackedScene" uid="uid://c4u2iciem1qwk" path="res://Scenes/damage_indicator.tscn" id="3_tx1dd"]
[ext_resource type="Texture2D" uid="uid://daawsliegojif" path="res://Health Bar Asset Pack 2 by Adwit Rahman/Health Bar Asset Pack 2 by Adwit Rahman/greenbar (3).png" id="3_vgqql"]
[ext_resource type="Texture2D" uid="uid://ymxrexviafox" path="res://Health Bar Asset Pack 2 by Adwit Rahman/Health Bar Asset Pack 2 by Adwit Rahman/greenbar (2).png" id="4_fkybt"]
[ext_resource type="PackedScene" uid="uid://df0pp0widlupj" path="res://Scenes/GameOverScreen.tscn" id="6_x3wgy"]
[ext_resource type="AudioStream" uid="uid://0sy2pgmq385s" path="res://Audio/Sword swing.wav" id="7_3smsa"]
[ext_resource type="Script" uid="uid://cb358t64p7lxu" path="res://Scripts/shop_menu.gd" id="7_8erm5"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f1ek2"]
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f1ek2"]
albedo_color = Color(2.117753e-06, 0.915427, 0.9165865, 1)

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_tx1dd"]
material = SubResource("StandardMaterial3D_f1ek2")
size = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_f1ek2"]
size = Vector3(75.15686, 76.15098, 119.91957)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v0iea"]
radius = 0.47509766
height = 2.2380614

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkybt"]
bg_color = Color(0, 0.63442093, 0.24651521, 1)

[sub_resource type="FontFile" id="FontFile_3smsa"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/variation_coordinates = {}
cache/0/face_index = 0
cache/0/embolden = 0.0
cache/0/transform = Transform2D(1, 0, 0, 1, 0, 0)
cache/0/spacing_top = 0
cache/0/spacing_bottom = 0
cache/0/spacing_space = 0
cache/0/spacing_glyph = 0
cache/0/baseline_offset = 0.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0

[sub_resource type="SystemFont" id="SystemFont_8erm5"]
subpixel_positioning = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_vgqql"]

[sub_resource type="Animation" id="Animation_tx1dd"]
resource_name = "BlockIdle"
length = 5.0
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character/Node/Skeleton3D:mixamorigRightForeArm")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 22.35649, 2.7980633, 6.4833617, 0.3, 1, 4.67807, 4.8637805, 12.513204)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character/Node/Skeleton3D:mixamorigRightForeArm")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0.0031213528, 0.0050403327, -0.69629663, 0.71772975, 0.3, 1, 0.003121328, 0.0050402856, -0.69629663, 0.7177297)

[sub_resource type="Animation" id="Animation_8erm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character/Node/Skeleton3D/RightHandSocket/SwordHitbox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character/Node/Skeleton3D/RightHandSocket/Sword/SlashTrail:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_f1ek2"]
resource_name = "SwordSlash"
step = 0.05
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character/Node/Skeleton3D:mixamorigRightHand")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1.110223e-15, 28.810404, 1.7053026e-13, 0.2, 1, -1.6822563e-05, 28.810396, 4.199549e-06, 0.45, 1, 1.110223e-15, 28.810404, 1.7053026e-13)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character/Node/Skeleton3D:mixamorigRightHand")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0.013032375, -0.22049564, -0.006137873, 0.9752816, 0.25, 1, -0.067594126, -0.5620078, 0.138635, 0.8126246, 0.45, 1, 0.013032375, -0.22049564, -0.006137873, 0.9752816)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("character/Node/Skeleton3D/RightHandSocket/SwordHitbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.22, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("character/Node/Skeleton3D/RightHandSocket/Sword/SlashTrail:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.18, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tx1dd"]
_data = {
&"BlockIdle": SubResource("Animation_tx1dd"),
&"RESET": SubResource("Animation_8erm5"),
&"SwordSlash": SubResource("Animation_f1ek2")
}

[node name="Player" type="CharacterBody3D" unique_id=1745298599 groups=["Player"]]
script = ExtResource("1_v0iea")
shockwave_scene = ExtResource("2_f1ek2")
damage_indicator_scene = ExtResource("3_tx1dd")

[node name="character" parent="." unique_id=1354423130 instance=ExtResource("2_8erm5")]
transform = Transform3D(-0.01, 0, -8.7422775e-10, 0, 0.01, 0, 8.7422775e-10, 0, -0.01, 0, 1.2173959, 0.050407648)

[node name="Skeleton3D" parent="character/Node" parent_id_path=PackedInt32Array(1354423130, 1175110776) index="0" unique_id=1481144907]
bones/0/position = Vector3(0.5715294, 107.42716, -1.4372902)
bones/0/rotation = Quaternion(0.10042606, -0.16391052, -0.013782224, 0.9812534)
bones/1/rotation = Quaternion(0.0113214245, -0.005565345, 0.016711192, 0.99978083)
bones/2/rotation = Quaternion(0.076965205, -0.01125279, 0.0121164685, 0.9968967)
bones/3/rotation = Quaternion(0.065089256, -0.010110912, 0.012565487, 0.99774915)
bones/4/rotation = Quaternion(-0.05835342, 0.02825997, -0.022235729, 0.99764824)
bones/5/rotation = Quaternion(-0.115974784, 0.119528495, -0.043530446, 0.9850726)
bones/7/rotation = Quaternion(-0.051279277, -3.1300067e-05, -0.0010887629, 0.99868375)
bones/7/scale = Vector3(1, 1, 0.99999994)
bones/9/rotation = Quaternion(0.61488706, 0.3074897, -0.66711587, 0.28691542)
bones/10/rotation = Quaternion(0.21255776, 0.08046209, 0.1658037, 0.9596115)
bones/11/rotation = Quaternion(0.008269216, -0.00016064382, 0.6705992, 0.7417738)
bones/12/rotation = Quaternion(-0.2153818, 0.17452732, 0.12292109, 0.95291203)
bones/13/rotation = Quaternion(0.18325733, 0.2011431, 0.063831754, 0.9601478)
bones/14/rotation = Quaternion(0.042629845, 0.0358227, 0.068538606, 0.99609333)
bones/15/rotation = Quaternion(0.09481503, -0.10723187, -0.23950651, 0.9602855)
bones/17/rotation = Quaternion(0.10610268, -0.0912321, -0.008620306, 0.99012357)
bones/18/rotation = Quaternion(0.17558576, -0.0031280748, -0.03240179, 0.9839259)
bones/19/rotation = Quaternion(0.33883867, -0.0015854274, -0.063484505, 0.9386988)
bones/21/rotation = Quaternion(0.0016063601, -0.0039007068, -0.062205654, 0.99805444)
bones/22/rotation = Quaternion(0.447849, -0.010377247, -0.08328567, 0.89016134)
bones/23/rotation = Quaternion(0.15282156, -0.00545085, -0.028723087, 0.98782134)
bones/25/rotation = Quaternion(-0.15626079, 0.01348283, -0.17582852, 0.9718463)
bones/26/rotation = Quaternion(0.21784309, -0.006782037, -0.04048503, 0.97512025)
bones/27/rotation = Quaternion(0.31085536, -0.0031764396, -0.057066854, 0.94873726)
bones/29/rotation = Quaternion(-0.044073362, 0.04845216, -0.29288757, 0.9539009)
bones/30/rotation = Quaternion(0.22944297, -0.0054245936, -0.04281182, 0.97236496)
bones/31/rotation = Quaternion(0.45627162, -0.0024613717, -0.08433598, 0.8858316)
bones/33/rotation = Quaternion(0.6718793, -0.3000334, 0.6042664, 0.30564734)
bones/34/position = Vector3(2.2044187, 15.060859, -0.4350857)
bones/34/rotation = Quaternion(0.27044344, -0.010509388, -0.20629984, 0.94031394)
bones/34/scale = Vector3(0.99999994, 0.99999994, 1)
bones/35/position = Vector3(22.35649, 2.7980633, 6.4833617)
bones/35/rotation = Quaternion(0.0031213677, 0.0050403327, -0.69629663, 0.71772975)
bones/35/scale = Vector3(1.0000015, 1.0000021, 0.9999998)
bones/36/position = Vector3(-3.364511e-06, 28.810402, 8.399095e-07)
bones/36/rotation = Quaternion(-0.007465034, -0.31186724, 0.0309521, 0.9495921)
bones/36/scale = Vector3(0.9999974, 1.0000011, 0.99999994)
bones/37/rotation = Quaternion(0.014049992, -0.09316595, -0.458116, 0.88388485)
bones/38/rotation = Quaternion(-0.0036717155, 0.059628718, 0.3599621, 0.93105227)
bones/39/rotation = Quaternion(-0.027534474, 0.010832261, -0.2298424, 0.97277796)
bones/41/rotation = Quaternion(-0.18049182, -0.0009264869, -0.026062496, 0.9832307)
bones/42/rotation = Quaternion(0.3783111, 0.0031743764, 0.050415028, 0.9242993)
bones/43/rotation = Quaternion(0.07131643, 0.0015677207, 0.009765031, 0.99740475)
bones/45/rotation = Quaternion(-0.12483572, 0.009846445, -0.030290285, 0.9916661)
bones/46/rotation = Quaternion(0.49609983, 0.009642317, 0.064119644, 0.8658411)
bones/47/rotation = Quaternion(0.37676334, 0.005139456, 0.050277844, 0.9249298)
bones/49/rotation = Quaternion(0.13626467, -0.000113934264, 0.012357052, 0.9905954)
bones/50/rotation = Quaternion(0.05750543, 0.006723598, 0.0079588955, 0.99829084)
bones/51/rotation = Quaternion(0.049041, 0.003400569, 0.0064184973, 0.9987704)
bones/53/rotation = Quaternion(0.25178498, -0.010749921, 0.029085694, 0.9672863)
bones/54/rotation = Quaternion(0.46722457, 0.004930789, 0.049868505, 0.8827175)
bones/55/rotation = Quaternion(0.3668377, 0.00298181, 0.04105159, 0.929374)
bones/57/rotation = Quaternion(0.142127, 0.37572575, 0.8989168, -0.17486836)
bones/58/rotation = Quaternion(-0.42538536, -0.056229234, 0.0352874, 0.90257436)
bones/59/rotation = Quaternion(0.5890806, -0.15417601, -0.11364136, 0.7850474)
bones/60/rotation = Quaternion(0.24961707, 0.075486235, -0.019178633, 0.9652074)
bones/62/rotation = Quaternion(-0.13113719, 0.31998223, 0.9318695, 0.109698646)
bones/63/rotation = Quaternion(-0.42085946, 0.070167884, -0.036823157, 0.90365803)
bones/64/rotation = Quaternion(0.6196233, 0.14676505, 0.1027727, 0.76417583)
bones/65/rotation = Quaternion(0.24098879, -0.07289354, 0.017762445, 0.96762365)
bones/87/rotation = Quaternion(-0.47123295, 0.5271998, 0.52719975, -0.4712329)

[node name="LeftHandAttachment" type="BoneAttachment3D" parent="character/Node/Skeleton3D" index="1" unique_id=1160727580]
transform = Transform3D(0.61912763, -0.38127053, -0.6865228, -0.7355037, 0.024789318, -0.67706716, 0.27516416, 0.92413116, -0.2650781, 20.643913, 114.331505, 31.312347)
bone_name = "mixamorigLeftHand"
bone_idx = 12

[node name="Torch" type="SpotLight3D" parent="character/Node/Skeleton3D/LeftHandAttachment" unique_id=1372157353]
transform = Transform3D(57.007515, 61.658768, -54.298622, -48.859596, -27.69006, -82.740555, -66.05214, 73.69843, 14.340825, 1.3089218, 12.421391, -8.875015)
shadow_enabled = true
spot_range = 20.0

[node name="RightHandSocket" type="BoneAttachment3D" parent="character/Node/Skeleton3D" index="2" unique_id=1684214965]
transform = Transform3D(0.7105416, -0.10853559, 0.69523215, 0.65713966, -0.2509089, -0.71078336, 0.25158423, 0.9619101, -0.10695862, -21.069422, 132.9966, 51.788975)
bone_name = "mixamorigRightHand"
bone_idx = 36

[node name="Sword" parent="character/Node/Skeleton3D/RightHandSocket" unique_id=209332843 instance=ExtResource("2_cvnsp")]
transform = Transform3D(27.985308, -41.557396, 18.163654, 12.1266985, -11.65224, -57.07388, 51.66978, 25.242987, 3.5572505, 22.297585, 17.418741, -9.698082)

[node name="SlashTrail" type="GPUParticles3D" parent="character/Node/Skeleton3D/RightHandSocket/Sword" unique_id=988967264]
transform = Transform3D(1, 1.4901161e-08, -1.0430813e-07, 2.9802322e-08, 1, -2.9802322e-08, 2.9802322e-08, -2.9802322e-08, 1, -0.041834593, -0.1612134, 0.025604725)
emitting = false
amount = 16
lifetime = 0.3
process_material = SubResource("ParticleProcessMaterial_f1ek2")
draw_pass_1 = SubResource("RibbonTrailMesh_tx1dd")

[node name="SwordHitbox" type="Area3D" parent="character/Node/Skeleton3D/RightHandSocket" unique_id=767383088]
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="character/Node/Skeleton3D/RightHandSocket/SwordHitbox" unique_id=65618685]
transform = Transform3D(0.7874717, -0.616055, 0.01920858, 0.23590547, 0.3300507, 0.91401476, -0.56941956, -0.7152266, 0.40523177, 61.380722, 64.18368, 21.04081)
shape = SubResource("BoxShape3D_f1ek2")

[node name="AnimationPlayer" parent="character" index="1" unique_id=1423317006]
root_motion_track = NodePath("Node/Skeleton3D:mixamorigHips")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1400095843]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.018664598, 0.9343126, -0.10894334)
shape = SubResource("CapsuleShape3D_v0iea")

[node name="Head" type="Node3D" parent="." unique_id=986498467]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.13018611, 1.895367, -0.4210328)

[node name="FirstPerson" type="Camera3D" parent="Head" unique_id=76224455]

[node name="AttackCooldown" type="Timer" parent="." unique_id=841745568]
wait_time = 0.8

[node name="HUD" type="CanvasLayer" parent="." unique_id=1419298649]

[node name="HpBar" type="TextureProgressBar" parent="HUD" unique_id=850535668]
offset_left = 6.0
offset_top = -54.0
offset_right = 151.0
offset_bottom = 91.0
scale = Vector2(2, 2)
texture_under = ExtResource("3_vgqql")
texture_progress = ExtResource("4_fkybt")
texture_progress_offset = Vector2(0, 15)
tint_progress = Color(1, 0.047058824, 0.10980392, 1)

[node name="GoldLabel" type="Label" parent="HUD" unique_id=551729254]
offset_left = 1005.0
offset_top = 50.0
offset_right = 1045.0
offset_bottom = 84.0
theme_type_variation = &"HeaderMedium"
text = "0"

[node name="StaminaBar" type="ProgressBar" parent="HUD" unique_id=24574830]
offset_left = 32.0
offset_top = 78.0
offset_right = 245.0
offset_bottom = 95.0
theme_override_styles/fill = SubResource("StyleBoxFlat_fkybt")
value = 100.0
show_percentage = false

[node name="GameOverScreen" parent="HUD" unique_id=1039948773 instance=ExtResource("6_x3wgy")]
visible = false

[node name="DialogueBox" type="ColorRect" parent="HUD" unique_id=1161241990]
visible = false
anchors_preset = -1
anchor_left = 0.022569444
anchor_top = 1.0
anchor_right = 0.9817708
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.5882353)
metadata/_edit_use_anchors_ = true

[node name="TextLabel" type="Label" parent="HUD/DialogueBox" unique_id=1497056257]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -444.5
offset_top = -26.0
offset_right = 695.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25

[node name="ShopMenu" type="ColorRect" parent="HUD" unique_id=549660636]
visible = false
anchors_preset = -1
anchor_left = 0.34300002
anchor_top = 0.18200001
anchor_right = 0.71800005
anchor_bottom = 0.74700004
offset_left = -0.13601685
offset_top = 0.06399536
offset_right = -0.13604736
offset_bottom = -0.056030273
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.12978598, 0.13001335, 1)
script = ExtResource("7_8erm5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="HUD/ShopMenu" unique_id=1154818219]
layout_mode = 0
offset_left = 162.0
offset_top = 5.0
offset_right = 264.0
offset_bottom = 60.0
theme_override_fonts/font = SubResource("FontFile_3smsa")
theme_override_font_sizes/font_size = 40
text = "SHOP"
horizontal_alignment = 1

[node name="BuyHealthButton" type="Button" parent="HUD/ShopMenu" unique_id=2487939]
layout_mode = 0
offset_left = 264.0
offset_top = 268.0
offset_right = 423.0
offset_bottom = 299.0
text = "Health Potion(20 G)"

[node name="BuySpeedButton" type="Button" parent="HUD/ShopMenu" unique_id=6015187]
layout_mode = 0
offset_left = 10.0
offset_top = 266.0
offset_right = 167.0
offset_bottom = 297.0
text = "Speed Boost(100 G)"

[node name="CloseButton" type="Button" parent="HUD/ShopMenu" unique_id=863568510]
layout_mode = 0
offset_left = 388.0
offset_top = 3.0
offset_right = 433.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0.62781197, 0.053605705, 0.12546459, 1)
text = "X"

[node name="QuestLabel" type="Label" parent="HUD" unique_id=1221165569]
visible = false
offset_left = 32.0
offset_top = 95.0
offset_right = 245.0
offset_bottom = 118.0
theme_override_colors/font_color = Color(1, 0, 0.03137255, 0.70980394)
theme_override_fonts/font = SubResource("SystemFont_8erm5")
theme_override_font_sizes/font_size = 18
text = "Mission:Kill Goblins(0/5)"

[node name="AttackZone" type="Area3D" parent="." unique_id=932357471]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackZone" unique_id=1878526881]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.096396774, 0.536579, -0.91320366)
shape = SubResource("BoxShape3D_vgqql")

[node name="DashTimer" type="Timer" parent="." unique_id=2018183619]
wait_time = 0.2
one_shot = true

[node name="SwordSound" type="AudioStreamPlayer" parent="." unique_id=884053010]
stream = ExtResource("7_3smsa")

[node name="MainAnimator" type="AnimationPlayer" parent="." unique_id=999759412]
libraries/ = SubResource("AnimationLibrary_tx1dd")

[connection signal="body_entered" from="character/Node/Skeleton3D/RightHandSocket/SwordHitbox" to="." method="_on_sword_hitbox_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_attack_zone_body_entered"]
[connection signal="body_exited" from="AttackZone" to="." method="_on_attack_zone_body_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]

[editable path="character"]
